syntax = "proto3";

package device_motion;

// --- 核心消息结构 ---

// 顶级消息：用于在后端和设备之间传输协议数据
message DeviceMotionMessage {
  // 消息体，使用 oneof 确保只设置一个具体的消息类型
  oneof body {
    ConfigMessage config = 1;
    SessionMessage session = 2;
    ControlMessage control = 3;
  }
}

// --- 1. 配置消息 ---

// 单个运动序列单元的定义
message Movement {
  // 0向下，1向上
  enum Direction {
    DIRECTION_DOWN = 0;
    DIRECTION_UP = 1;
  }
  
  // 0顺时针，1逆时针（从上往下看）
  enum RotationDirection {
    ROT_DIR_CLOCKWISE = 0;
    ROT_DIR_COUNTER_CLOCKWISE = 1;
  }

  Direction direction = 1;
  // 本次运动距离占最大单向行程的比率 (float)
  float distance = 2; 
  // 本次运动时间 (float)
  float duration = 3;
  // 旋转速度，多少圈 (float)/秒
  float rotation = 4; 
  RotationDirection rotation_direction = 5;
}

// 单个手法（Primitive）运动模式的定义
message Primitive {
  // 手法运动模式id (string)
  string primitive_id = 1;
  // 运动序列列表
  repeated Movement movements = 2;
}

// 配置消息：配置在本次会话中使用的多个手法的运动模式
message ConfigMessage {
  // 手法运动模式列表
  repeated Primitive primitives = 1;
}

// --- 2. 会话消息 ---

// 会话中的单元（Unit）定义
message Unit {
  // 手法运动模式id (string)
  string primitive_id = 1;
  // 重复次数 (int)
  int32 iteration = 2;
  // 对配置的标准手法进行加速或者减速系数 (float)
  float intensity = 3;
}

// 会话消息：利用配置消息里配置的手法开始一个会话
message SessionMessage {
  // 多个单元
  repeated Unit units = 1;
}

// --- 3. 控制消息 ---

// 控制命令枚举
message ControlMessage {
  enum Command {
    COMMAND_UNSPECIFIED = 0; // 默认值，不使用
    COMMAND_RESET = 1;       // 重置到最上端
    COMMAND_PAUSE = 2;       // 暂停
    COMMAND_RESUME = 3;      // 继续
    COMMAND_SET_INTENSITY = 4; // 设置临时额外强度
  }
  
  Command command = 1;
  
  // 进行额外临时强度，乘到运行的说法强度上去。用在用户要求快点，慢点的时候 (float)
  // 仅在 command 为 COMMAND_SET_INTENSITY 时使用
  float intensity = 2;
  
  // 额外临时强度的生效时长，过后恢复 (float)
  // 仅在 command 为 COMMAND_SET_INTENSITY 时使用
  float duration = 3;
}

